# tryvoice-oss

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.train  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
apps/client-web/frontend/: capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/client-web/frontend/public/: manifest.json  state-inspector.html  sw.js  test_bumblebee.html
apps/client-web/frontend/src/: main.ts  styles.css
apps/host-runtime/backend/: __init__.py  app.py  auth.py  canonical_store.py  cli.py  config_migration.py  config_store.py  default_settings.json  env.example  index.html  paths.py  services.py
apps/host-runtime/backend/adapter/: __init__.py  (+3 more)
apps/host-runtime/tests/: test_training_service.py  test_tts_generator.py  test_wakeword_training_api.py  test_wakeword_training_e2e.py
docs/: wakeword-training-tool.md
docs/superpowers/plans/: 2026-03-29-wakeword-training-tool.md
docs/superpowers/specs/: 2026-03-29-wakeword-training-tool-design.md
scripts/: build-package.sh  dev.sh  download_sherpa_kws_model.sh  download_sherpa_kws_wasm.sh  export_model.py  export_whisper_encoder.py  generate_samples.py  generate_samples_hybrid.py  setup.sh  tmux-watchdog.sh  train_chinese_wakeword.py  train_from_samples.py  train_wakeword_mel.py  train_wakeword_oww.py  train_wakeword_simple.py  train_wakeword_v2.py  train_wakeword_v3.py  train_wakeword_whisper.py  verify_whisper_onnx.py
(+285 files in other folders)
