[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tryvoice"
version = "0.1.0"
description = "Pluggable voice chat runtime"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
    "aiohttp",
    "httpx",
    "python-dotenv",
    "loguru",
    "edge-tts",
    "psutil",
]

[project.optional-dependencies]
local-stt = ["faster-whisper>=1.0"]
vad = ["onnxruntime>=1.16", "numpy", "pydub"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "ruff"]

[project.scripts]
tryvoice = "backend.cli:main"

[tool.setuptools.packages.find]
where = ["apps/host-runtime"]

[tool.setuptools.package-data]
backend = [
    "static-dist/**/*",
    "static-dist/*",
    "wakeword/oww/*",
    "wakeword/sherpa-kws/*",
    "wakeword/*.ppn",
    "wakeword/*.pv",
    "wakeword/*.onnx",
    "wakeword/*.json",
    "wakeword/LICENSE.txt",
    "avatars/*",
    "*.json",
    "env.example",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
